# BadgerEngine

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml  release.yml
build_tools/bin2h/: CMakeLists.txt  bin2h.cpp
cmake/: assimp.cmake  bin2h.cmake  diagnostic.cmake  embed.cmake  shaders.cmake  spng.cmake  tinygltf.cmake  utils.cmake
shaders/: BSDF.frag  BSDF.vert  ShadowMap.vert  normal_debug.frag  normal_debug.vert
src/: BSDFVertexObject.cpp  BSDFVertexObject.h  CMakeLists.txt  Camera.cpp  Camera.h  ImageViewVertexObject.cpp  ImageViewVertexObject.h  PointLight.h  Renderer.cpp  Renderer.h  RenderingOptions.h  VertexObject.cpp  VertexObject.h  Window.cpp  Window.h  commandpool.h  descriptorsetlayout.h  font.cpp  font.h  graphicsobject.cpp  graphicsobject.h  pipeline.cpp  pipeline.h  renderer.cpp  renderer.h  renderpass.cpp  renderpass.h  swapchain.cpp  swapchain.h  vertexobject.cpp  vertexobject.h
src/Buffers/: BufferUtils.cpp  BufferUtils.h  CMakeLists.txt  MeshBuffer.h
src/Geometry/: CMakeLists.txt  Mesh.cpp  Mesh.h  ObjMesh.cpp  ObjMesh.h  Primitives.cpp  Primitives.h  Topology.h  Vertex.cpp  Vertex.h
src/Impl/: BSDFVertexObject.cpp  BSDFVertexObject.h  CMakeLists.txt  ColorRenderPass.cpp  ColorRenderPass.h  ImageViewVertexObject.cpp  ImageViewVertexObject.h  ShadowMapRenderPass.cpp  ShadowMapRenderPass.h  SwapChain.cpp  SwapChain.h  UploadedModel.h  UploadedTexture.cpp  UploadedTexture.h  commandpool.cpp  commandpool.h  font.cpp  font.h  graphicsobject.cpp  graphicsobject.h  logicdevicefactory.cpp  pipeline.cpp  pipeline.h  stringvector.cpp  swapchain.cpp  swapchain.h  vulkaninstancefactory.cpp
src/Impl/Buffers/: BufferUtils.cpp  BufferUtils.h  CMakeLists.txt  MeshBuffer.cpp  MeshBuffer.h
src/Impl/Text/: CMakeLists.txt  Font.cpp  Font.h  Typeface.cpp  Typeface.h  TypefaceImpl.h
src/Impl/Uploaded/: CMakeLists.txt  UploadedMesh.cpp  UploadedMesh.h  UploadedModel.h  UploadedTexture.cpp  UploadedTexture.h
src/Import/: AssimpImporter.cpp  AssimpImporter.h  CMakeLists.txt  Data.h  Importer.cpp  Importer.h  TinyGLTFImporter.cpp  TinyGLTFImporter.h
src/Model/: AssimpModel.cpp  AssimpModel.h  CMakeLists.txt  Material.cpp  Material.h  Model.h  Texture.h  TextureLoader.cpp  TextureLoader.h
src/Tools/: CMakeLists.txt  Model.h  UploadedModel.cpp  UploadedModel.h  UploadedTexture.cpp  UploadedTexture.h  buffer.cpp  buffer.h  hardware.cpp  logicdevicefactory.cpp
src/Utils/: CMakeLists.txt  Collections.h  Error.cpp  Error.h  Fs.cpp  Fs.h  NoNull.h  NumericCast.h  Visit.h
src/Windows/: CMakeLists.txt  GLFWWindow.cpp  GLFWWindow.h  SDL2Window.cpp  SDL2Window.h
